flexbox image items fixed

--- a/index.html
+++ b/index.html
@@ -134,14 +134,18 @@
 						exercitation ullamco laboris nisi ut aliquip ex ea
 						commodo consequat
 					</p>
+					<div class="main-button">
+						<a href="#">Learn More </a>
+					</div>
 				</div>
 				<div class="success-div-wrapper">
-					<div class="blank-image3"></div>
-					<div
-						style="align-self: center"
-						class="blank-image3 image-div2"
-					></div>
-					<div class="blank-image3"></div>
+					<div class="image-wrapper-div">
+						<div class="blank-image3"></div>
+						<div class="image-div2">
+							<div class="blank-image3"></div>
+							<div class="blank-image3"></div>
+						</div>
+					</div>
 				</div>
 			</section>
 			<!-- Years Success Section Ends -->
