--- a/index.html
+++ b/index.html
@@ -150,7 +150,85 @@
 			</section>
 			<!-- Years Success Section Ends -->
 			<!-- --------------------------------------------------------------------- -->
+
+			<!-- Total Completed Works Section Start  -->
+
+			<section class="total-completed-work">
+				<div class="total-completed-work-contents">
+					<h2>3000+ Completed Work</h2>
+					<h2>Which We have Successfully Done</h2>
+				</div>
+				<div class="total-work-section">
+					<div class="total-single-works">
+						<h2>980</h2>
+						<p>Projects</p>
+					</div>
+					<div class="total-single-works">
+						<h2>520</h2>
+						<p>Happy Clients</p>
+					</div>
+					<div class="total-single-works">
+						<h2>330</h2>
+						<p>Winners</p>
+					</div>
+					<div class="total-single-works">
+						<h2>120</h2>
+						<p>Recoment</p>
+					</div>
+				</div>
+			</section>
+			<!-- Total Completed Works Section Ends -->
+			<!-- --------------------------------------------------------------------- -->
+
+			<!-- Testimonial Section Start  -->
+			<section class="testimonial-section">
+				<div class="testimonial-contents">
+					<h5>TESTIMONIALS</h5>
+					<h2>Clients says about us</h2>
+				</div>
+				<div class="what-clients-say">
+					<div class="singles-client-what-says">
+						<h3>Louis Saville</h3>
+						<h5>/CEO at Google inc</h5>
+						<p>
+							Lorem ipsum dolor sit amet, consectetur adipiscing
+							elit, sed do eiusmod tempor incididunt ut labore et
+							dolore magna aliqua.
+						</p>
+					</div>
+					<div class="singles-client-what-says">
+						<h3>Rekha Varadwaz</h3>
+						<h5>/Manager at Nike inc</h5>
+						<p>
+							Lorem ipsum dolor sit amet, consectetur adipiscing
+							elit, sed do eiusmod tempor incididunt ut labore et
+							dolore magna aliqua.
+						</p>
+					</div>
+				</div>
+			</section>
+			<!-- Testimonial Section Ends -->
+			<!-- --------------------------------------------------------------------- -->
+
 			<!-- Home Section Start  -->
+
+			<!-- Years Success Section Ends -->
+
+			<!-- --------------------------------------------------------------------- -->
+			<!-- Home Section Start  -->
+
+			<!-- Years Success Section Ends -->
+
+			<!-- --------------------------------------------------------------------- -->
+			<!-- Home Section Start  -->
+
+			<!-- Years Success Section Ends -->
+
+			<!-- --------------------------------------------------------------------- -->
+			<!-- Home Section Start  -->
+
+			<!-- Years Success Section Ends -->
+			<!-- --------------------------------------------------------------------- -->
 		</section>
 	</body>
 </html>
